--- a/app/comps/clientHeader/clientHeader.html
+++ b/app/comps/clientHeader/clientHeader.html
@@ -50,7 +50,7 @@
 
             <!-- <h6 class="card-title">Detalles del Cliente</h6> -->
             <p class="mb-1"><span class="text-muted"> Código {{ (client_info.grupo_cliente == "02") ?  "de empleado":"" }} </span> {{client_info.cod_cliente}}</p>
-            <p class="mb-1" ng-if="client_info.grupo_cliente =='02'" ><span class="text-muted"> Nombre empleado</span> {{client_info.cod_cliente}}</p>
+            <p class="mb-1" ng-if="client_info.grupo_cliente =='02'" ><span class="text-muted"> Nombre empleado</span> {{client_info.nombre_empleado}}</p>
             <p class="mb-1"><span class="text-muted">Tipo de Venta: </span> {{client_info.tipo_venta}}</p>
             <p class="mb-1"><span class="text-muted">Plazo: </span> {{client_info.v_plazo}} dias</p>
             <p class="mb-1"><span class="text-muted">Limite de Credito: </span> {{formato(2,client_info.limite_credito)}}</p>
