--- a/app/comps/pedidos/pedidos.html
+++ b/app/comps/pedidos/pedidos.html
@@ -691,7 +691,7 @@
                   <!-- <label for="exampleFormControlSelect1">Seleccione</label> -->
                   <select class="form-control" ng-model="categoria.CODIGO" id="proveedor" >
                     <!-- <option value="null" >Todos</option> -->
-                    <option ng-repeat="x in listCategorias" value="{{x.NOMBRE}}">{{x.NOMBRE}}</option>
+                    <option ng-repeat="x in listCategorias" value="{{x.CODIGO}}">{{x.NOMBRE}}</option>
                     <option value="" disabled selected>Seleccione una categoria</option>
                   </select>
                 </div>
