--- a/app/comps/pedidos/pedidos.html
+++ b/app/comps/pedidos/pedidos.html
@@ -233,49 +233,49 @@
                                       <td class="left">
                                           <strong class="text-dark">Total bruto</strong>
                                       </td>
-                                      <td class="right">{{formato(2,totalesDdo.total_bruto)}} </td>
+                                      <td class="left">{{formato(2,totalesDdo.total_bruto)}} </td>
                                   </tr>
                                   <tr>
                                       <td class="left">
                                           <strong class="text-dark">Desc. Volumen</strong>
                                       </td>
-                                      <td class="right">{{formato(2,totalesDdo.desc_volumen)}} </td>
+                                      <td class="left">{{formato(2,totalesDdo.desc_volumen)}} </td>
                                   </tr>
                                   <tr>
                                       <td class="left">
                                           <strong class="text-dark">Otros descuentos</strong>
                                       </td>
-                                      <td class="right">{{formato(2,totalesDdo.otros_descuentos)}} </td>
+                                      <td class="left">{{formato(2,totalesDdo.otros_descuentos)}} </td>
                                   </tr>
                                   <tr>
                                       <td class="left">
                                           <strong class="text-dark">Desc. Adicional</strong> </td>
 
-                                          <td class="right">{{formato(2,totalesDdo.desc_adicional)}} </td>
+                                          <td class="left">{{formato(2,totalesDdo.desc_adicional)}} </td>
                                   </tr>
                                   <tr>
                                       <td class="left">
                                           <strong class="text-dark">Desc. dpp</strong> </td>
 
-                                          <td class="right">{{formato(2,totalesDdo.desc_dpp)}} </td>
+                                          <td class="left">{{formato(2,totalesDdo.desc_dpp)}} </td>
                                   </tr>
                                   <tr>
                                       <td class="left">
                                           <strong class="text-dark">Sub - Total</strong> </td>
 
-                                          <td class="right">{{formato(2,totalesDdo.sub_total)}} </td>
+                                          <td class="left">{{formato(2,totalesDdo.sub_total)}} </td>
                                   </tr>
                                   <tr>
                                       <td class="left">
                                           <strong class="text-dark">Impuesto</strong> </td>
 
-                                          <td class="right">{{formato(2,totalesDdo.impuesto)}} </td>
+                                          <td class="left">{{formato(2,totalesDdo.impuesto)}} </td>
                                   </tr>
                                   <tr>
                                       <td class="left">
                                           <strong class="text-dark">Total</strong> </td>
 
-                                          <td class="right">{{formato(2,totalesDdo.total)}} </td>
+                                          <td class="left">{{formato(2,totalesDdo.total)}} </td>
                                   </tr>
                               </tbody>
                           </table>
@@ -525,49 +525,49 @@
                                     <td class="left">
                                         <strong class="text-dark">Total bruto</strong>
                                     </td>
-                                    <td class="right">{{formato(2,totalesDdo.total_bruto)}} </td>
+                                    <td class="left">{{formato(2,totalesDdo.total_bruto)}} </td>
                                 </tr>
                                 <tr>
                                     <td class="left">
                                         <strong class="text-dark">Desc. Volumen</strong>
                                     </td>
-                                    <td class="right">{{formato(2,totalesDdo.desc_volumen)}} </td>
+                                    <td class="left">{{formato(2,totalesDdo.desc_volumen)}} </td>
                                 </tr>
                                 <tr>
                                     <td class="left">
                                         <strong class="text-dark">Otros descuentos</strong>
                                     </td>
-                                    <td class="right">{{formato(2,totalesDdo.otros_descuentos)}} </td>
+                                    <td class="left">{{formato(2,totalesDdo.otros_descuentos)}} </td>
                                 </tr>
                                 <tr>
                                     <td class="left">
                                         <strong class="text-dark">Desc. Adicional</strong> </td>
 
-                                        <td class="right">{{formato(2,totalesDdo.desc_adicional)}} </td>
+                                        <td class="left">{{formato(2,totalesDdo.desc_adicional)}} </td>
                                 </tr>
                                 <tr>
                                     <td class="left">
                                         <strong class="text-dark">Desc. dpp</strong> </td>
 
-                                        <td class="right">{{formato(2,totalesDdo.desc_dpp)}} </td>
+                                        <td class="left">{{formato(2,totalesDdo.desc_dpp)}} </td>
                                 </tr>
                                 <tr>
                                     <td class="left">
                                         <strong class="text-dark">Sub - Total</strong> </td>
 
-                                        <td class="right">{{formato(2,totalesDdo.sub_total)}} </td>
+                                        <td class="left">{{formato(2,totalesDdo.sub_total)}} </td>
                                 </tr>
                                 <tr>
                                     <td class="left">
                                         <strong class="text-dark">Impuesto</strong> </td>
 
-                                        <td class="right">{{formato(2,totalesDdo.impuesto)}} </td>
+                                        <td class="left">{{formato(2,totalesDdo.impuesto)}} </td>
                                 </tr>
                                 <tr>
                                     <td class="left">
                                         <strong class="text-dark">Total</strong> </td>
 
-                                        <td class="right">{{formato(2,totalesDdo.total)}} </td>
+                                        <td class="left">{{formato(2,totalesDdo.total)}} </td>
                                 </tr>
                             </tbody>
                         </table>
