--- a/app/comps/pedidos/pedidos.html
+++ b/app/comps/pedidos/pedidos.html
@@ -659,7 +659,18 @@
 
             <div class="col-sm-12 col-md-12 col-lg-12">
               <button class="btn btn-primary" style="float: right; font-weight: bold;margin-bottom: 1rem;" ng-click="infoPsico = true;" ng-show="!infoPsico"  > <i class="fa fa-info"></i> Requisitos para Psicotropicos</button>
-
+              <div class="form-check">
+                <input class="form-check-input" type="radio" name="exampleRadios" ng-model="tipoBusqueda" id="exampleRadios1" value="0" checked>
+                <label class="form-check-label" for="exampleRadios1">
+                  Busqueda por producto
+                </label>
+              </div>
+              <div class="form-check">
+                <input class="form-check-input" type="radio" name="exampleRadios" ng-model="tipoBusqueda" id="exampleRadios2" value="1">
+                <label class="form-check-label" for="exampleRadios2">
+                  Busqueda por componente activo
+                </label>
+              </div>
               <label for="clientes">Busqueda por producto</label>
               <div class="input-group mb-3 ">
                 <input type="text" class="form-control"
@@ -673,29 +684,34 @@
                 </div>
               </div>
 
-              <label for="proveedor">Filtrar por proveedor</label>
-              <div class="input-group mb-3 ">
-                <div class="form-group">
-                  <!-- <label for="exampleFormControlSelect1">Seleccione</label> -->
-                  <select class="form-control" ng-model="proveedor.cod_proveedor" id="proveedor" >
-                    <option value="null" >Todos</option>
-                    <option ng-repeat="x in listProveedores" value="{{x.cod_proveedor}}">{{x.nombre_proveedor}}</option>
-                    <option value="" disabled selected>Seleccione un proveedor</option>
-                  </select>
+              <div class="col-md-6">
+                <label for="proveedor">Filtrar por proveedor</label>
+                <div class="input-group mb-3 ">
+                  <div class="form-group">
+                    <!-- <label for="exampleFormControlSelect1">Seleccione</label> -->
+                    <select class="form-control" ng-model="proveedor.cod_proveedor" id="proveedor" >
+                      <option value="null" >Todos</option>
+                      <option ng-repeat="x in listProveedores" value="{{x.cod_proveedor}}">{{x.nombre_proveedor}}</option>
+                      <option value="" disabled selected>Seleccione un proveedor</option>
+                    </select>
+                  </div>
                 </div>
+              </div>
+              <div class="col-md-6">
+                <label for="filtro">Filtrar por categoria</label>
+                <div class="input-group mb-3 ">
+                  <div class="form-group">
+                    <!-- <label for="exampleFormControlSelect1">Seleccione</label> -->
+                    <select class="form-control" ng-model="categoria.CODIGO" id="proveedor" >
+                      <!-- <option value="null" >Todos</option> -->
+                      <option ng-repeat="x in listCategorias" value="{{x.CODIGO}}">{{x.NOMBRE}}</option>
+                      <option value="" disabled selected>Seleccione una categoria</option>
+                    </select>
+                  </div>
+                </div>
+
               </div>
 
-              <label for="filtro">Filtrar por categoria</label>
-              <div class="input-group mb-3 ">
-                <div class="form-group">
-                  <!-- <label for="exampleFormControlSelect1">Seleccione</label> -->
-                  <select class="form-control" ng-model="categoria.CODIGO" id="proveedor" >
-                    <!-- <option value="null" >Todos</option> -->
-                    <option ng-repeat="x in listCategorias" value="{{x.CODIGO}}">{{x.NOMBRE}}</option>
-                    <option value="" disabled selected>Seleccione una categoria</option>
-                  </select>
-                </div>
-              </div>
 
               <div ng-if="showProductTable" >
 
