--- a/app/comps/pedidos/pedidos.html
+++ b/app/comps/pedidos/pedidos.html
@@ -671,7 +671,7 @@
                   Busqueda por componente activo
                 </label>
               </div>
-              <label for="clientes">Busqueda por producto</label>
+              <label for="clientes">Busqueda </label>
               <div class="input-group mb-3 ">
                 <input type="text" class="form-control"
                 ng-model="busqueda_prod"
@@ -684,33 +684,38 @@
                 </div>
               </div>
 
-              <div class="col-md-6">
-                <label for="proveedor">Filtrar por proveedor</label>
-                <div class="input-group mb-3 ">
-                  <div class="form-group">
-                    <!-- <label for="exampleFormControlSelect1">Seleccione</label> -->
-                    <select class="form-control" ng-model="proveedor.cod_proveedor" id="proveedor" >
-                      <option value="null" >Todos</option>
-                      <option ng-repeat="x in listProveedores" value="{{x.cod_proveedor}}">{{x.nombre_proveedor}}</option>
-                      <option value="" disabled selected>Seleccione un proveedor</option>
-                    </select>
-                  </div>
-                </div>
-              </div>
-              <div class="col-md-6">
-                <label for="filtro">Filtrar por categoria</label>
-                <div class="input-group mb-3 ">
-                  <div class="form-group">
-                    <!-- <label for="exampleFormControlSelect1">Seleccione</label> -->
-                    <select class="form-control" ng-model="categoria.CODIGO" id="proveedor" >
-                      <!-- <option value="null" >Todos</option> -->
-                      <option ng-repeat="x in listCategorias" value="{{x.CODIGO}}">{{x.NOMBRE}}</option>
-                      <option value="" disabled selected>Seleccione una categoria</option>
-                    </select>
+              <div class="col-md-12">
+                <div class="col-md-6">
+                  <label for="proveedor">Filtrar por proveedor</label>
+                  <div class="input-group mb-3 ">
+                    <div class="form-group">
+                      <!-- <label for="exampleFormControlSelect1">Seleccione</label> -->
+                      <select class="form-control" ng-model="proveedor.cod_proveedor" id="proveedor" >
+                        <option value="null" >Todos</option>
+                        <option ng-repeat="x in listProveedores" value="{{x.cod_proveedor}}">{{x.nombre_proveedor}}</option>
+                        <option value="" disabled selected>Seleccione un proveedor</option>
+                      </select>
+                    </div>
                   </div>
                 </div>
 
+                <div class="col-md-6">
+                  <label for="filtro">Filtrar por categoria</label>
+                  <div class="input-group mb-3 ">
+                    <div class="form-group">
+                      <!-- <label for="exampleFormControlSelect1">Seleccione</label> -->
+                      <select class="form-control" ng-model="categoria.CODIGO" id="proveedor" >
+                        <!-- <option value="null" >Todos</option> -->
+                        <option ng-repeat="x in listCategorias" value="{{x.CODIGO}}">{{x.NOMBRE}}</option>
+                        <option value="" disabled selected>Seleccione una categoria</option>
+                      </select>
+                    </div>
+                  </div>
+
+                </div>
+
               </div>
+
 
 
               <div ng-if="showProductTable" >
