--- a/app/comps/pedidos/pedidos.html
+++ b/app/comps/pedidos/pedidos.html
@@ -659,14 +659,14 @@
 
             <div class="col-sm-12 col-md-12 col-lg-12">
               <button class="btn btn-primary" style="float: right; font-weight: bold;margin-bottom: 1rem;" ng-click="infoPsico = true;" ng-show="!infoPsico"  > <i class="fa fa-info"></i> Requisitos para Psicotropicos</button>
-              <div class="form-check">
-                <input class="form-check-input" type="radio" name="exampleRadios" ng-model="tipoBusqueda" id="exampleRadios1" value="0" checked>
+              <div class="form-check mb-5">
+                <input class="form-check-input" type="radio" name="exampleRadios" ng-model="tipoBusqueda" id="exampleRadios1" ng-value="0" checked>
                 <label class="form-check-label" for="exampleRadios1">
                   Busqueda por producto
                 </label>
               </div>
-              <div class="form-check">
-                <input class="form-check-input" type="radio" name="exampleRadios" ng-model="tipoBusqueda" id="exampleRadios2" value="1">
+              <div class="form-check mb-5">
+                <input class="form-check-input" type="radio" name="exampleRadios" ng-model="tipoBusqueda" id="exampleRadios2"ng-value="1">
                 <label class="form-check-label" for="exampleRadios2">
                   Busqueda por componente activo
                 </label>
@@ -684,7 +684,7 @@
                 </div>
               </div>
 
-              <div class="col-md-12">
+              <div class="row">
                 <div class="col-md-6">
                   <label for="proveedor">Filtrar por proveedor</label>
                   <div class="input-group mb-3 ">
