--- a/app/comps/pedidos/pedidos.html
+++ b/app/comps/pedidos/pedidos.html
@@ -952,6 +952,20 @@
               <div class="card " >
                 <div class="card-body">
                   <h5 class="card-title">Busqueda por cliente </h5>
+
+                  <div class="form-check mb-3">
+                    <input class="form-check-input" type="radio" name="exampleRadios" ng-model="tipoBusquedaCliente" id="exampleRadios1" ng-value="0" >
+                    <label class="form-check-label" for="exampleRadios1">
+                      Busqueda por cliente
+                    </label>
+                  </div>
+                  <div class="form-check mb-3">
+                    <input class="form-check-input" type="radio" name="exampleRadios" ng-model="tipoBusquedaCliente" id="exampleRadios2" ng-value="1" >
+                    <label class="form-check-label" for="exampleRadios2">
+                      Busqueda por empleado
+                    </label>
+                  </div>
+
                   <div class="row">
                     <div class="col-sm-12 col-md-6 col-lg-6">
                       <!-- <label for="clientes">Busqueda por cliente</label> -->
