--- a/app/comps/usuarios/usuarios.html
+++ b/app/comps/usuarios/usuarios.html
@@ -22,7 +22,7 @@
         <select class="form-control form-control-sm" ng-model="user.role">
 
           <option ng-repeat="type in type_user" value="{{type.type}}">
-            {{type.type | uppercase}}
+            {{type.text | uppercase}}
           </option>
           <option value="" disabled selected>Selecciona un tipo de usuario</option>
         </select>
@@ -39,6 +39,18 @@
               Este usuario ya existe
             </div>
           </div>
+
+          <label>Estatus</label>
+          <!--<input type="text" ng-model="user_view.role" class="form-control" placeholder="Tipo de usuario">-->
+          <select class="form-control form-control-sm" ng-model="user.estatus">
+
+            <option ng-repeat="type in estatus_user" value="{{estatus.id}}">
+              {{estatus.text | uppercase}}
+            </option>
+            <option value="" disabled selected>Selecciona un tipo de usuario</option>
+          </select>
+
+
 
           <table class="table table-inverse">
             <thead>
