--- a/app/comps/usuarios/usuarios.html
+++ b/app/comps/usuarios/usuarios.html
@@ -31,10 +31,12 @@
           <div class="form-group">
             <label>Nombre</label>
             <input type="text" ng-model="user.name" class="form-control" ng-if="typeview == 'add' || typeview == 'edit'" placeholder="Nombre">
+            <span ng-if="typeview == 'view'" >{{user.name}}</span>
           </div>
 
           <div class="form-group">
             <label>Username</label>
+            <span ng-if="typeview == 'view'"  >{{user.username}}</span>
             <input type="text" ng-model="user.username"  ng-keyup="availableUser()" ng-if="typeview == 'add' || typeview == 'edit'" class="form-control" placeholder="Username">
             <div class="invalid-feedback">
               Este usuario ya existe
@@ -71,21 +73,25 @@
                   <div class="form-check" ng-if="typeview == 'add' || typeview == 'edit'" >
                     <input type="checkbox" class="form-check-input" ng-model="permisos[x].ver" ng-disabled="!hasOwnProp(x,'ver')"  >
                   </div>
+                  <span ng-if="typeview == 'view '&& permisos[x].ver" ><i class="fas fa-check"></i></span>
                 </td>
                 <td>
                   <div class="form-check" ng-if="hasOwnProp(x,'crear')" ng-if="typeview == 'add' || typeview == 'edit'" >
                     <input type="checkbox" class="form-check-input" ng-model="permisos[x].crear" ng-disabled="!hasOwnProp(x,'crear')" >
                   </div>
+                  <span ng-if="typeview == 'view '&& permisos[x].crear" ><i class="fas fa-check"></i></span>
                 </td>
                 <td>
                   <div class="form-check" ng-if="hasOwnProp(x,'editar')" ng-if="typeview == 'add' || typeview == 'edit'"  >
                     <input type="checkbox" class="form-check-input"  ng-model="permisos[x].editar" ng-disabled="!hasOwnProp(x,'editar')" >
                   </div>
+                  <span ng-if="typeview == 'view '&& permisos[x].editar" ><i class="fas fa-check"></i></span>
                 </td>
                 <td>
                   <div class="form-check"ng-if="hasOwnProp(x,'eliminar')" ng-if="typeview == 'add' || typeview == 'edit'"  >
                     <input type="checkbox" class="form-check-input" ng-model="permisos[x].eliminar" ng-disabled="!hasOwnProp(x,'eliminar')" >
                   </div>
+                  <span ng-if="typeview == 'view '&& permisos[x].eliminar" ><i class="fas fa-check"></i></span>
                 </td>
               </tr>
 
@@ -96,8 +102,9 @@
       </div>
       <div class="modal-footer" style="display: block;margin: 0 auto;">
         <button type="button" class="btn btn-secondary" data-dismiss="modal">Cerrar</button>
-        <button type="button"  class="btn btn-primary" ng-if="typeview == 'view'" ng-disabled="!usernameValid"  ng-click="editPedido();">Editar</button>
+        <button type="button"  class="btn btn-primary" ng-if="typeview == 'view'" ng-disabled="!usernameValid"  ng-click="goToEdit();">Editar</button>
         <button type="button" class="btn btn-primary" ng-click="addUser(user);"  ng-if="typeview == 'add'" >Guardar</button>
+        <button type="button" class="btn btn-primary" ng-click="updUser(user);"  ng-if="typeview == 'edit'" >Guardar</button>
         <!-- <button type="button" class="btn btn-primary" data-dismiss="modal" ng-click="addUser(user);">Cerrar</button> -->
       </div>
     </div>
