--- a/app/comps/usuarios/usuarios.html
+++ b/app/comps/usuarios/usuarios.html
@@ -102,7 +102,7 @@
       </div>
       <div class="modal-footer" style="display: block;margin: 0 auto;">
         <button type="button" class="btn btn-secondary" data-dismiss="modal">Cerrar</button>
-        <button type="button"  class="btn btn-primary" ng-if="typeview == 'view'" ng-disabled="!usernameValid"  ng-click="goToEdit();">Editar</button>
+        <button type="button"  class="btn btn-primary" ng-if="typeview == 'view'" ng-click="goToEdit();">Editar</button>
         <button type="button" class="btn btn-primary" ng-click="addUser(user);"  ng-if="typeview == 'add'" >Guardar</button>
         <button type="button" class="btn btn-success" ng-click="updUser(user);"  ng-if="typeview == 'edit'" >Guardar</button>
         <!-- <button type="button" class="btn btn-primary" data-dismiss="modal" ng-click="addUser(user);">Cerrar</button> -->
