--- a/app/comps/usuarios/usuarios.html
+++ b/app/comps/usuarios/usuarios.html
@@ -29,13 +29,13 @@
         </select>
 
           <div class="form-group">
-            <label>Nombre</label>
+            <label>Nombre:</label><br>
             <input type="text" ng-model="user.name" class="form-control" ng-if="typeview == 'add' || typeview == 'edit'" placeholder="Nombre">
             <span ng-if="typeview == 'view'" >{{user.name}}</span>
           </div>
 
           <div class="form-group">
-            <label>Username</label>
+            <label>Username:</label><br>
             <span ng-if="typeview == 'view'"  >{{user.username}}</span>
             <input type="text" ng-model="user.username"  ng-keyup="availableUser()" ng-if="typeview == 'add' || typeview == 'edit'" class="form-control" placeholder="Username">
             <div class="invalid-feedback">
