--- a/app/comps/usuarios/usuarios.html
+++ b/app/comps/usuarios/usuarios.html
@@ -37,7 +37,7 @@
           <div class="form-group">
             <label>Username:</label><br>
             <span ng-if="typeview == 'view'"  >{{user.username}}</span>
-            <input type="text" ng-model="user.username"  ng-keyup="availableUser()" ng-if="typeview == 'add' || typeview == 'edit'" class="form-control" placeholder="Username">
+            <input type="text" ng-model="user.username"  ng-keyup="availableUser()" ng-if="typeview == 'add'" class="form-control" placeholder="Username">
             <div class="invalid-feedback">
               Este usuario ya existe
             </div>
@@ -47,7 +47,7 @@
           <!--<input type="text" ng-model="user_view.role" class="form-control" placeholder="Tipo de usuario">-->
           <select class="form-control form-control-sm" ng-disabled="!(typeview == 'add' || typeview == 'edit')"  ng-model="user.estatus">
 
-            <option ng-repeat="type in estatus_user" value="{{estatus.id}}">
+            <option ng-repeat="type in estatus_user" value="{{type.id}}">
               {{type.text | uppercase}}
             </option>
             <option value="" disabled selected>Selecciona el estatus</option>
