--- a/app/comps/sidebar/sidebar.html
+++ b/app/comps/sidebar/sidebar.html
@@ -47,7 +47,8 @@
           Salir
         </a>
       </li>
-
+      <div id="encrypted"></div>
+      <div id="decrypted"></div>
 <!--
         <li>
             <a href="#"><i class="fa fa-fw fa-folder"></i> Page one</a>
