--- a/app/comps/clientes/clientes.html
+++ b/app/comps/clientes/clientes.html
@@ -44,7 +44,7 @@
                 <!-- <table datatable="" dt-options="dtOptions" dt-columns="dtColumns" class="table table-striped table-bordered">
                 </table> -->
 
-                <table datatable="ng"  dt-options="dtOptions"  class="table table-striped table-bordered" >
+                <table datatable=""  dt-options="dtOptions"  class="table table-striped table-bordered" >
                   <thead>
                     <tr>
 
@@ -70,7 +70,7 @@
                         <td><p class="text-center">{{ x.docu_identif_cliente }}</p></td>
                         <td><p class="text-center">{{ x.zona }}</p></td>
                         <td><p class="text-center">{{ x.direccion_cliente }}</p></td>
-                        <td><p class="text-center">{{ x.direccion_cliente }}</p></td>
+                        <td><p class="text-center">{{ x.direccion_entrega_cliente }}</p></td>
 
                         <td><p class="text-center">{{ x.nombre_encargado }}</p></td>
                         <td><p class="text-center">{{ x.telefono1 }}</p></td>
