--- a/app/comps/clientes/clientes.html
+++ b/app/comps/clientes/clientes.html
@@ -42,7 +42,7 @@
                 </div>
 
 
-                <table datatable=""  dt-options="dtOptions"  class="table table-striped table-bordered" >
+                <table datatable="ng"  dt-options="dtOptions"  class="table table-striped table-bordered" >
                   <thead>
                     <tr>
 
