--- a/app/comps/clientes/clientes.html
+++ b/app/comps/clientes/clientes.html
@@ -42,7 +42,7 @@
                 </div>
 
 
-                <table datatable="ng"  dt-options="dtOptions"  class="table table-striped table-bordered" >
+                <table datatable="ng"  dt-options="dtOptiones"  id="tablaClient" class="table table-striped table-bordered" >
                   <thead>
                     <tr>
 
@@ -71,6 +71,7 @@
                         <td><p class="text-center">{{ x.direccion_entrega_cliente }}</p></td>
                         <td><p class="text-center">{{ x.nombre_encargado }}</p></td>
                         <td><p class="text-center">{{ x.telefono1 }}</p></td>
+
                     </tr>
 
 
