--- a/app/comps/clientes/clientes.html
+++ b/app/comps/clientes/clientes.html
@@ -42,7 +42,7 @@
                 </div>
 
 
-                <table datatable="ng"  dt-options="dtOptiones"  id="tablaClient" class="table table-striped table-bordered" >
+                <table class="table table-striped table-bordered"  datatable="ng" dt-options="dtOptiones">
                   <thead>
                     <tr>
 
