--- a/app/comps/clientes/clientes.html
+++ b/app/comps/clientes/clientes.html
@@ -42,7 +42,8 @@
                 </div>
 
 
-                <table class="table table-striped table-bordered"  datatable="ng" dt-options="dtOptiones">
+                <!-- <table class="table table-striped table-bordered"  datatable="ng" dt-options="dtOptiones"> -->
+                  <table class="table table-striped table-bordered"  datatable="ng" dt-options="dtOptiones">
                   <thead>
                     <tr>
 
