--- a/app/comps/clientes/clientes.html
+++ b/app/comps/clientes/clientes.html
@@ -43,7 +43,7 @@
 
 
                 <!-- <table class="table table-striped table-bordered"  datatable="ng" dt-options="dtOptiones"> -->
-                  <table class="table table-striped table-bordered" >
+                  <table class="table table-striped table-bordered" datatable="ng" dt-options="dtOptions" >
                   <thead>
                     <tr>
 
