--- a/app/comps/clientes/clientes.html
+++ b/app/comps/clientes/clientes.html
@@ -72,6 +72,7 @@
                         <td><p class="text-center">{{ x.direccion_entrega_cliente }}</p></td>
                         <td><p class="text-center">{{ x.nombre_encargado }}</p></td>
                         <td><p class="text-center">{{ x.telefono1 }}</p></td>
+                        <td><p class="text-center">{{ x.email1 }}</p></td>
 
                     </tr>
 
