--- a/app/comps/clientes/clientes.html
+++ b/app/comps/clientes/clientes.html
@@ -26,7 +26,7 @@
             <div class="card-body">
               <div class="col-md-12">
                 <div class="col-sm-12 col-md-6 col-lg-6">
-                  <!-- <label for="clientes">Busqueda por cliente</label> -->
+                  <label for="clientes">Busqueda por cliente</label>
                   <div class="input-group mb-3">
                     <input type="text" id="clientes"
                     class="form-control"
