--- a/app/comps/pedidos/pedidos.html
+++ b/app/comps/pedidos/pedidos.html
@@ -953,7 +953,7 @@
                 <div class="card-body">
                   <h5 class="card-title">Busqueda por cliente </h5>
 
-                  <!-- <div class="form-check mb-3">
+                  <div class="form-check mb-3">
                     <input class="form-check-input" type="radio" name="exampleRadios" ng-model="tipoBusquedaCliente" id="exampleRadios1" ng-value="0" >
                     <label class="form-check-label" for="exampleRadios1">
                       Busqueda por cliente
@@ -964,7 +964,7 @@
                     <label class="form-check-label" for="exampleRadios2">
                       Busqueda por empleado
                     </label>
-                  </div> -->
+                  </div>
 
                   <div class="row">
                     <div class="col-sm-12 col-md-6 col-lg-6">
