--- a/app/comps/sidebar/sidebar.html
+++ b/app/comps/sidebar/sidebar.html
@@ -13,8 +13,14 @@
           <a href="#!/deuda" class=""><i class="fa fa-fw  fas fa-receipt" ></i>Deuda</a>
         </li>
         <li ng-if="permisos.usuario.ver" >
+          <a href="#!/perfil" class="">
+            <i class="fa fa-fw fas fa-users" ></i>
+            perfil
+          </a>
+        </li>
+        <li ng-if="permisos.usuario.ver" >
           <a href="#!/usuarios" class="">
-            <i class="fa fa-fw fas fa-user" ></i>
+            <i class="fa fa-fw fas fa-users" ></i>
             Usuarios
           </a>
         </li>
