--- a/app/index.html
+++ b/app/index.html
@@ -98,6 +98,7 @@
   <script type="text/javascript" src="comps/loading/loading.js"></script>
   <script type="text/javascript" src="comps/clientHeader/clientHeader.js"></script>
   <script type="text/javascript" src="comps/home/home.js"></script>
+  <script type="text/javascript" src="comps/perfil/perfil.js"></script>
   <script type="text/javascript" src="comps/deuda/deuda.js"></script>
   <script type="text/javascript" src="comps/generar/generar.min.js?v=1.0"></script>
   <script type="text/javascript" src="comps/consulta/consulta.min.js?v=1.0"></script>
