--- a/app/comps/footer/footer.html
+++ b/app/comps/footer/footer.html
@@ -3,27 +3,31 @@
   <div class="container">
     <div class="row text-center">
       <div class="col-md-4">
-        <br>
-        <br>
-        <i class="fab fa-2x fa-instagram" style="color: #2d587d;"></i>
-        <br>
-        <p>¡Síguenos en Instagram!</p>
-        <br>
+        <a href="https://www.instagram.com/drogdeloeste">
+          <br>
+          <br>
+          <i class="fab fa-2x fa-instagram" style="color: #2d587d;"></i>
+          <br>
+          <p>¡Síguenos en Instagram!</p>
+          <br>
+        </a>
       </div>
       <div class="col-md-4">
-        <br>
-        <br>
-        <i class="fab fa-2x fa-facebook" style="color: #39508e;"></i>
-        <br>
-        <p>¡Agréganos en Facebook!</p>
+        <a href="https://www.facebook.com/drogdeloeste">
+          <br>
+          <br>
+          <i class="fab fa-2x fa-facebook" style="color: #39508e;"></i>
+          <br>
+          <p>¡Agréganos en Facebook!</p>
+        </a>
       </div>
-      <div class="col-md-4">
+      <!-- <div class="col-md-4">
         <br>
         <br>
         <i class="fab fa-2x fa-twitter" style="color: #33a3da;"  ></i>
         <br>
         <p>¡Síguenos en Twitter!</p>
-      </div>
+      </div> -->
     </div>
   </div>
 </div>
