--- a/app/comps/footer/footer.html
+++ b/app/comps/footer/footer.html
@@ -3,7 +3,7 @@
   <div class="container">
     <div class="row text-center">
       <div class="col-md-4">
-        <a href="http://www.instagram.com/drogdeloeste">
+        <a href="http://www.instagram.com/drogdeloeste" target="_blank">
           <br>
           <br>
           <i class="fab fa-2x fa-instagram" style="color: #2d587d;"></i>
@@ -13,7 +13,7 @@
         </a>
       </div>
       <div class="col-md-4">
-        <a href="http://www.facebook.com/drogdeloeste">
+        <a href="http://www.facebook.com/drogdeloeste" target="_blank">
           <br>
           <br>
           <i class="fab fa-2x fa-facebook" style="color: #39508e;"></i>
